noinst_PROGRAMS = list info ls

list_SOURCES	= list.c

list_LDFLAGS	= $(PROGS_LDFLAGS)

list_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
	          $(top_builddir)/progs/libprogs/libprogs.a

info_SOURCES	= info.c

info_LDFLAGS	= $(PROGS_LDFLAGS)

info_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
	          $(top_builddir)/progs/libprogs/libprogs.a

INCLUDES	= -I$(top_srcdir)/include

ls_SOURCES	= ls.c

ls_LDFLAGS	= $(PROGS_LDFLAGS)

ls_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
	          $(top_builddir)/progs/libprogs/libprogs.a

INCLUDES	= -I$(top_srcdir)/include

